seperate routes into movies and non-movies types
